# MCU

./: .mxproject  PLAN.md  README.md  STM32G431CBT_MCU.ioc  index.html
Core/Inc/: adc_bus.h  adc_protocol.h  ads1220_device.h  ads1220_scheduler.h  app.h  app_config.h  board_topology.h  diag.h  fault_policy.h  frame_builder.h  frame_protocol.h  main.h  pixel_map.h  project_config.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  usb_stream.h  version.h
Core/Src/: adc_bus.c  adc_protocol.c  ads1220_device.c  ads1220_scheduler.c  app.c  board_topology.c  diag.c  fault_policy.c  frame_builder.c  frame_protocol.c  main.c  pixel_map.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  usb_stream.c  version.c
EWARM/: Project.eww  STM32G431CBT_MCU.ewd  STM32G431CBT_MCU.ewp
USB_Device/App/: usbd_cdc_if.c
docs/: baseline.md  continuous_sampling.md  fault_codes.md  fault_injection_v0.2.0.md  recovery_state_machine.md  roadmap.md  v1_1_multi_device.md  v1_frame_protocol.md  v1_topology.md
tests/: CMakeLists.txt  README.md
tests/host/: main.c  test_adc_protocol.c  test_app_smoke.c  test_frame_protocol.c  test_usb_stream.c
tests/host/include/: fake_hal.h  fake_usb.h  stm32g4xx_hal.h  test_assert.h  test_config.h  usbd_cdc_if.h  version.h
tests/host/stubs/: fake_adc_protocol_deps.c  fake_app_deps.c  fake_hal.c  fake_usb.c
tools/: usb_capture.py
tools/host_viewer/: frame_decoder.py  viewer.py
